--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -27,6 +27,7 @@
 
     {%- render 'meta-tags' -%}
     {%- render 'fonts' -%}
+    {%- render 'custom-blog-fonts' -%}
     {%- render 'scripts' -%}
     {%- render 'theme-styles-variables' -%}
     {%- render 'color-schemes' -%}
