--- a/snippets/render-inline-media.liquid
+++ b/snippets/render-inline-media.liquid
@@ -126,11 +126,12 @@
           src="{{ image | image_url: width: 1200 }}"
           srcset="
             {{ image | image_url: width: 400 }} 400w,
+            {{ image | image_url: width: 600 }} 600w,
             {{ image | image_url: width: 800 }} 800w,
             {{ image | image_url: width: 1200 }} 1200w,
             {{ image | image_url: width: 1600 }} 1600w
           "
-          sizes="{% if layout == 'float-left' or layout == 'float-right' or layout == 'left' or layout == 'right' %}(min-width: 750px) 400px, 100vw{% else %}(min-width: 750px) calc(100vw - 10rem), calc(100vw - 3rem){% endif %}"
+          sizes="{% if layout == 'float-left' or layout == 'float-right' or layout == 'left' or layout == 'right' %}(min-width: 750px) 500px, 100vw{% else %}(min-width: 750px) calc(100vw - 10rem), calc(100vw - 3rem){% endif %}"
           alt="{{ image.alt | default: caption | default: article.title }}"
           loading="lazy"
           width="{{ image.width }}"
