--- a/snippets/custom-blog-fonts.liquid
+++ b/snippets/custom-blog-fonts.liquid
@@ -2,9 +2,9 @@
 <style>
   @font-face {
     font-family: 'ZTFormom';
-    src: url('{{ 'fonts/ZT Formom.woff2' | asset_url }}') format('woff2'),
-         url('{{ 'fonts/ZT Formom.woff' | asset_url }}') format('woff'),
-         url('{{ 'fonts/ZT Formom.ttf' | asset_url }}') format('truetype');
+    src: url('{{ 'ZT Formom.woff2' | asset_url }}') format('woff2'),
+         url('{{ 'ZT Formom.woff' | asset_url }}') format('woff'),
+         url('{{ 'ZT Formom.ttf' | asset_url }}') format('truetype');
     font-style: normal;
     font-weight: normal;
     font-display: swap;
@@ -12,9 +12,9 @@
 
   @font-face {
     font-family: 'ZTFormom';
-    src: url('{{ 'fonts/ZT Formom Italic.woff2' | asset_url }}') format('woff2'),
-         url('{{ 'fonts/ZT Formom Italic.woff' | asset_url }}') format('woff'),
-         url('{{ 'fonts/ZT Formom Italic.ttf' | asset_url }}') format('truetype');
+    src: url('{{ 'ZT Formom Italic.woff2' | asset_url }}') format('woff2'),
+         url('{{ 'ZT Formom Italic.woff' | asset_url }}') format('woff'),
+         url('{{ 'ZT Formom Italic.ttf' | asset_url }}') format('truetype');
     font-style: italic;
     font-weight: normal;
     font-display: swap;
